--- a/style.css
+++ b/style.css
@@ -10,3 +10,16 @@
     width: 61px;
     height: 32px;
 }
+
+#or{
+    width: 100%; 
+    text-align: center; 
+    border-bottom: 1px solid #000; 
+    line-height: 0.1em;
+    margin: 10px 0 20px; 
+    font-size: 12px;
+ }
+ #or span { 
+    background:#fff; 
+    padding:0 10px; 
+}
