--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --light-color : rgb(226, 255, 226);
+    --light-color : #bafbfd;
     --gradient : linear-gradient(270deg, #38B790, #06f7ff);
 }
 .fb{
@@ -37,6 +37,7 @@ input{
 .sign-in{
     width: 30%;
     border-radius: 20px;
+    background: var(--gradient);
 }
 .sign-up{
     background-color: white;
@@ -54,4 +55,7 @@ input{
 .sec-col{
     background: var(--gradient);
     /* height: 90vh; */
+}
+.first-col,.sec-col{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
