--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ input{
     border: none;
     background-color:var(--light-color);
 }
+
 .sign-in{
     width: 30%;
     border-radius: 20px;
@@ -58,4 +59,8 @@ input{
 }
 .first-col,.sec-col{
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+.highlight{
+    color: #06f7ff;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
