--- a/style.css
+++ b/style.css
@@ -64,3 +64,6 @@ input{
     color: #00dbe3;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.row:hover{
+    
+}
