--- a/style.css
+++ b/style.css
@@ -51,8 +51,15 @@ input{
 }
 .sign-up{
     background-color: white;
+    color:#07a8ad;
     width: 60%;
     border-radius: 25px;
+    border: 2px double var(--color);
+    box-shadow: 2px 2px 10px white,
+    -2px -2px 10px white;
+}
+.sign-up:hover{
+    color: white;
 }
 .main-login{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -60,7 +67,7 @@ input{
 }
 .sec-col-heading{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+    color: white;
 }
 .sec-col{
     background: var(--gradient);
